--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "axios": "^0.21.1",
+    "components": "^0.1.0",
+    "core-js": "^3.15.1",
+    "install": "^0.13.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
