--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-scroll": "^2.4.1",
     "components": "^0.1.0",
     "core-js": "^3.15.1",
     "install": "^0.13.0",
