--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
